# CSS-Project

./: .gitignore  Code.ipynb  GenAI Usage.md  README.md  TO-DO.md  Tim_GenAI.md  pyproject.toml  requirements.txt  test.py
Code/: Changelog.md  Code.py  Iga_Code V2.ipynb  Iga_Code_v2.ipynb  Prison.py  RQ1.ipynb  RQ1: Animations and Network Architectures.ipynb  Tim_Code V2.ipynb  Tim_Code.ipynb  Tim_Code_RL.ipynb  Tristan_Code V2.ipynb  Tristan_Code.ipynb  Zheng_Code V2.ipynb
Code/Old/: Code.ipynb  RQ1: Animations and Network Architectures.ipynb  Tim_Code_RL.ipynb  Tristan_Code v2.ipynb  Zheng_Code.ipynb
Code/Plots/Result_RQ0/Old/: RQ0_Results_Summary.md
Code/Plots/Result_RQ0/Result_V3/: pivot_Snow.csv
Code/Result_RQ0/: pivot_Default.csv  pivot_Foe.csv  summary_df.csv
Code/Result_RQ0/Old/: pivot_Prison.csv  pivot_Snow.csv
Code/Result_RQ0/Result_S0/: Tc.csv
Code/Results/Result_RQ0/: Zheng.pptx  ~$Zheng.pptx
Documents/: Tristan_GenAI.md
Documents/Result_RQ0/: # RQ0 Results Summary.md
GenAI Usage/: Tim_GenAI.md  Tristan_GenAI.md  Zheng_GenAI.md
Presentation/: Outline.md  Tristan Slides.pptx  ~$Template.pptx  ~$Tristan Slides.pptx
ipd_network/: README.md  pyproject.toml  requirements.txt
ipd_network/src/ipd_network/: __init__.py  agents.py  core.py  metrics.py  network.py  simple_strategies.py  simulation.py  strategies.py  utils.py
ipd_network/src/ipd_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipd_network/src/ipd_network/examples/: __init__.py  grid_imitation_demo.py
ipd_network/tests/: test_core.py
(+23 files in other folders)
